[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genlayer-py"
version = "0.1.0b2"
description = "GenLayer Python SDK"
authors = [
    { name = "GenLayer" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "web3>=7.10.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["."]
